LayoutTests/storage/indexeddb/mozilla/resources/clear.js
@@ -37,28 +37,9 @@ function cleared()
     request.onerror = unexpectedErrorCallback;
 }
 
-// The version of this test that existed up until revision ~163500 had the following areWeClearYet handler.
-// The intention was apparently to verify that calling openCursor() on an empty object store returned a null cursor.
-/*
 function areWeClearYet()
 {
     cursor = evalAndLog("cursor = request.result;");
     shouldBe("cursor", "null");
-    finishJSTest();
-}
-*/
-
-// The spec's current description of IDBObjectStore.openCursor(), as found here:
-// http://www.w3.org/TR/IndexedDB/#widl-IDBObjectStore-openCursor-IDBRequest-any-range-IDBCursorDirection-direction
-// does not allow for a null cursor to be returned. It states:
-// "...this method creates a cursor. The cursor must implement the IDBCursorWithValue interface."
-// and then gives no allowance for not returning that created cursor.
-// ---
-// So our current reading of the spec is that a cursor must be returned, but it must be pointing to an undefined key/value record.
-function areWeClearYet()
-{
-    cursor = evalAndLog("cursor = request.result;");
-    shouldBe("cursor.key", "undefined");
-    shouldBe("cursor.value", "undefined");
     finishJSTest();
 }
